--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,12 +41,11 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Build and push Docker image
-        uses: mr-smithers-excellent/docker-build-push@v6.2
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
-            image: nishanthvish/f1app
-            dockerfile: Dockerfile
+            context: .
+            file: ./Dockerfile
             push: true
             tags: nishanthvish/f1app:latest, nishanthvish/f1app:latest:${{ github.run_number }}
-            registry: docker.io  # Replace with the URL of your Docker registry
         
 
