--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -8,11 +8,11 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      app: f1app
+      app: f1app  # This label should match the one in template.metadata.labels
   template:
     metadata:
       labels:
-        app: f1app
+        app: f1app  # This label should match the one in selector.matchLabels
     spec:
       containers:
       - name: go-f1app
