--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,7 @@ jobs:
       - go/load-cache # Load cached Go modules.
       - go/mod-download # Run 'go mod download'.
       - go/save-cache # Save Go modules to cache.
-      - go/test: # Runs 'go test ./...' but includes extensive parameterization for finer tuning.
-          covermode: atomic
-          failfast: true
-          race: true
-      - persist_to_workspace:
-          root: ~/project
-          paths: .
+      - go/test # Runs 'go test ./...' but includes extensive parameterization for finer tuning.
   build_and_push:
     docker:
       - image: cimg/node:20.3.1
